# course_work_

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/: admin.py  services.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogarticle_list.html
config/: settings.py  urls.py
mailing/: forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: base.html  client_form.html  contacts.html  index.html  log_list.html  start_page.html
mailing/templates/mailing/includes/: inc_menu.html
static/css/: album.css
users/: admin.py  forms.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: user_list.html
