[tool.poetry]
name = "course-work"
version = "0.1.0"
description = ""
authors = ["Vadim <vdmkonshin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.2"
django-email-users = "^2.0.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
pillow = "^10.4.0"
pytils = "^0.4.1"
flake8 = "^7.1.0"
black = "^24.4.2"
redis = "^5.0.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

